<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="mainTransition" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_marginTop="64dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_configure_heading"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textColor="@color/vibrant_title"
            android:layout_marginBottom="48dp"
            android:layout_marginHorizontal="8dp"/>

        <com.google.android.material.search.SearchBar
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="?attr/colorOnSurfaceInverse"
            app:defaultMarginsEnabled="false"
            android:layout_marginBottom="8dp"
            android:hint="@string/station_search_hint"
            app:shapeAppearanceOverlay="@style/Theme.BixBrother.ConnectedSearchBar" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorOnSurfaceInverse"
            style="@style/Widget.Material3.CardView.Filled"
            app:shapeAppearance="@style/Theme.BixBrother.ConnectedCard" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/active_entry_list"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="4dp"
                    android:layout_gravity="center"
                    android:scrollbars="vertical"
                    tools:listitem="@layout/widget_configure_entry" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPositive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="32dp"
            android:text="@string/activity_configure_done"
            android:enabled="false" />

    </LinearLayout>

    <com.google.android.material.search.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/station_search_hint"
        app:layout_anchor="@id/search_bar" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_view_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:paddingVertical="8dp"
            android:clipToPadding="false"
            tools:listitem="@layout/widget_configure_search_entry" />

    </com.google.android.material.search.SearchView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
